manifests/yelb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "yelb-ui"
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  labels:
    app: "yelb-ui"
spec:
  rules:
    - http:
        paths:
          - path: /yelb/*
            backend:
              serviceName: "yelb-ui"
              servicePort: 80
